# This file is part of the Hercules-Helper project.
#
# (C) Copyright William R. Lewis, 2020-2024

# Changelog:
#
# Updated: 22 JAN 2024
# - Improvements to Alpine support
#
# Updated: 21 JAN 2024
# - Apline now supported, for Hercules-Aethra (not fully tested)
#
# Updated: 12 JAN 2024
# - fix type in README
# - add support for Devuan Linux
#
# Updated: 29 DEC 2023
# - correct Regina REXX build on Pine64
#
# Updated: 06 DEC 2023
# - fix path in dpkg postinst script
#
# Updated: 04 DEC 2023
# - initial work on Hercules-Aethra Debian packager
#
# Updated: 03 DEC 2023
# - switch defaults from SDL-Hercules-390 to Hercules-Aethra
#
# Updated: 23 NOV 2023
# - add --prefix command line switch to set install dir for configure
#   this is a shortcut to avoid using a local config file
# - display number of CPUs before running 'make check'
# - set MACOSX_DEPLOYMENT_TARGET= for macOS Xcode-tools / Clang
#
# Updated: 17 NOV 2023
# - add regina-links.txt with URLs to the Gists
# - make the --enable-custom configure option configurable
#   using new opt_custom_build_msg to config options
# - fix some little things in the config files
#
# Updated: 16 NOV 2023
# - move Regina-REXX source tarballs to GitHub Gists
#   don't rely on wrljet.com for these
# - use curl instead of wget to download the Regina tarballs from Gists
# - add curl to the required packages
#
# Updated: 14 NOV 2023
# - fix defaults for Regina in config files to not overwrite options
# - add new sdl-hyperion-freebsd-14.conf to use Regina 3.9.3
# - use -Wno-incompatible-funtion-pointer-types to Clang 16
#   Regina configure.
#
# Updated: 19 OCT 2023
# - add support for Raspberry Pi 5 Model B Rev 1.0
#   (hope it works, since I don't have one to test)
#
# Updated: 24 SEP 2023
# - add support for Oracle Linux (tested with 8.8)
#
# Updated: 23 SEP 2023
# - add support for Orange OS (Arch based), on Orange Pi Zero 2W board
#
# Updated: 11 SEP 2023
# - add libcap, libc6-compat, musl-locales, and procps for Alpine
#